# Multi-agent-travel-planner

./: requirements.txt
agents/: pyvenv.cfg
agents/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py
ai_travel_agent/: README.md  pyproject.toml
ai_travel_agent/src/ai_travel_agent/: crew.py  inputs_guide.txt  main.py
ai_travel_agent/src/ai_travel_agent/config/: agents.yaml  tasks.yaml
ai_travel_agent/src/ai_travel_agent/tools/: custom_tool.py
ai_travel_flow/: README.md  pyproject.toml
ai_travel_flow/src/ai_travel_flow/: main.py
travel_planner/: .gitignore  README.md  pyproject.toml
travel_planner/src/travel_planner/: crew.py  main.py
travel_planner/src/travel_planner/config/: agents.yaml  tasks.yaml
travel_planner/src/travel_planner/tools/: __init__.py  custom_tool.py
