[project]
name = "ai_travel_agent"
version = "0.1.0"
description = "Ai_travel_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
ai_travel_agent = "ai_travel_agent.main:run"
run_crew = "ai_travel_agent.main:run"
train = "ai_travel_agent.main:train"
replay = "ai_travel_agent.main:replay"
test = "ai_travel_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
