[project]
name = "ai_travel_flow"
version = "0.1.0"
description = "ai_travel_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
]

[project.scripts]
kickoff = "ai_travel_flow.main:kickoff"
run_crew = "ai_travel_flow.main:kickoff"
plot = "ai_travel_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
